[package]
name = "vexide-motorgroup"
description = "Motor groups for vexide in userland."
repository = "https://github.com/zabackary/vexide-motorgroup/"
authors = ["zabackary"]
license = "MIT"
readme = "README.md"
keywords = ["vex", "vexide", "vex-robotics", "robotics", "motorgroup"]
version = "2.2.0-alpha.4"
edition = "2024"

[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = { version = "0.8.0-alpha.2" }

[dev-dependencies]
vexide = { version = "0.8.0-alpha.2", features = [
  "full",
  "vex-sdk-jumptable",
  "vex-sdk-mock",
] }
